--- a/style/style.css
+++ b/style/style.css
@@ -2,12 +2,15 @@
 .btn-primary{
     border-radius: 5px;
 background: rgb(253, 110, 10);
-padding: 18px 30px;
+padding: 10px 20px;
 }
 
 header{
     max-width: 1240px;
     margin: 0 auto;
+    background-image: url("../images/developer.png"),url("../images/header_bg.png");
+    background-repeat: no-repeat;
+    background-position: top left,right bottom;
 }
 nav{
     display: flex;
@@ -27,4 +30,22 @@ nav ul{
 }
 span{
     color: yellow;
+}
+
+/* banner design start here */
+.banner-container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 auto;
+}
+.image-container{
+    width: 584px;
+    height: 400px;
+ 
+}
+.developer-img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
 }
