--- a/style/style.css
+++ b/style/style.css
@@ -49,3 +49,9 @@ span{
     height: 100%;
     object-fit: contain;
 }
+
+.title{
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+}
